092_polynomial_1/grade.txt
Grading at 11/04/2024:21:14:58.105899
For commit ID 635816191b6c73711dc6a384ae607fe2959ab087
Grading at Mon Nov  4 04:14:57 PM EST 2024
Compiling your code with our test main
In file included from testmain.cpp:4:
poly.hpp: In member function ‘Polynomial<NumT> Polynomial<NumT>::operator-() const’:
poly.hpp:36:57: error: range-based ‘for’ loops only available with ‘-std=c++11’ or ‘-std=gnu++11’ [-Werror]
   36 |     for (const std::pair<const unsigned, NumT> & term : terms) {
      |                                                         ^~~~~
poly.hpp: In member function ‘Polynomial<NumT> Polynomial<NumT>::operator+(const Polynomial<NumT>&) const’:
poly.hpp:45:57: error: range-based ‘for’ loops only available with ‘-std=c++11’ or ‘-std=gnu++11’ [-Werror]
   45 |     for (const std::pair<const unsigned, NumT> & term : rhs.terms) {
      |                                                         ^~~
poly.hpp: In member function ‘Polynomial<NumT> Polynomial<NumT>::operator*(const NumT&) const’:
poly.hpp:57:57: error: range-based ‘for’ loops only available with ‘-std=c++11’ or ‘-std=gnu++11’ [-Werror]
   57 |     for (const std::pair<const unsigned, NumT> & term : terms) {
      |                                                         ^~~~~
poly.hpp: In member function ‘Polynomial<NumT> Polynomial<NumT>::operator*(const Polynomial<NumT>&) const’:
poly.hpp:66:58: error: range-based ‘for’ loops only available with ‘-std=c++11’ or ‘-std=gnu++11’ [-Werror]
   66 |     for (const std::pair<const unsigned, NumT> & term1 : terms) {
      |                                                          ^~~~~
poly.hpp:67:60: error: range-based ‘for’ loops only available with ‘-std=c++11’ or ‘-std=gnu++11’ [-Werror]
   67 |       for (const std::pair<const unsigned, NumT> & term2 : rhs.terms) {
      |                                                            ^~~
cc1plus: all warnings being treated as errors
g++ failed

Overall Grade: FAILED
